--- a/GoogleMapsMaterial/src/index.html
+++ b/GoogleMapsMaterial/src/index.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0WrBOLAZ2PDdoqkGveIOVQU0QvXDHm7U">
+    <!-- <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB0WrBOLAZ2PDdoqkGveIOVQU0QvXDHm7U"> -->
 </script>
 </head>
 <body>
